feat: create user route

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 ATLAS_URI = mongodb+srv://vitorferronato:*Vue481516@cluster0.jioxnim.mongodb.net/chat-app?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY = supersecretkey481516
