--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-input-emoji": "^5.9.0"
+    "react-input-emoji": "^5.9.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
